--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-
+        <title>Can you guess the number?</title>
+        </head>
+        
+        <body>
+            <h1>Are you good at guessing numbers?</h1>
+            <p>Guess a number between 1 and 500</p>
+            <input type="number" id="guessInput">
+            <button id="checkanswerButton">Check your Answer</button>
+            <p id="messagetouser"></p>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
