Add image and changed font color

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <input type="number" id="guessInput">
             <button id="checkanswerButton">Check your Answer</button>
             <p id="messagetouser"></p>
+            <img src="assets/images/numberjacks.jpg" alt="lower half page image" class="lower-half">
     <script src="assets/js/script.js"></script>
 </body>
 </html>
