Add label message for user where to enter their guess

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <body>
             <h1>Are you good at guessing numbers?</h1>
             <p>Guess a number between 1 and 500</p>
+            <div class="input-box">
+                <span>Enter your guess here:</span>
             <input type="number" id="guessInput">
-            <button id="checkanswerButton">Check your Answer</button>
+            <button id="checkanswerButton">Check your Answer</button></div>
             <p id="messagetouser"></p>
             <img src="assets/images/numberjacks.jpg" alt="lower half page image" class="lower-half">
     <script src="assets/js/script.js"></script>
